[package]
name = "lidar_slam"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lidar_odometry"
path = "src/lidar_odometry.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "0.4"
rosidl_runtime_rs = "0.4"
example_interfaces = "*"
nav_msgs = "*"
sensor_msgs = "*"
geometry_msgs = "*"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
nalgebra = "0.34.0"
