<package format="3">
    <name>lidar_slam</name>
  <version>0.1.0</version>
  <description>project package.</description>
  <maintainer email="hk3367@columbia.edu">Harsha Kotta</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclrs</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>rosidl_runtime_rs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
